# e2e-test-20260128-tanaka

./: pyproject.toml
.research/: research_history.json
.research/latex/MDPI/: main.tex
.research/results/: stderr.txt  stdout.txt
.research/results/train/wandb/latest-run/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
.research/results/train/wandb/run-20260129_153845-comparative-1-qwen3-0.6b-ptb/files/: config.yaml  wandb-summary.json
.research/results/train/wandb/run-20260129_182157-comparative-1-qwen3-1.7b-ptb/files/: requirements.txt  wandb-metadata.json
config/: config.yaml
config/runs/: comparative-1-mistral-7b-v0.3-ptb.yaml  comparative-1-qwen3-0.6b-ptb.yaml  comparative-1-qwen3-1.7b-ptb.yaml  proposed-mistral-7b-v0.3-ptb.yaml  proposed-qwen3-0.6b-ptb.yaml  proposed-qwen3-1.7b-ptb.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
