[project]
name = "autocorevollora"
version = "0.1.0"
description = "AutoCoreVolLoRA experiments with Hydra and WandB"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "peft>=0.12.0",
    "accelerate>=0.29.0",
    "bitsandbytes>=0.43.0",
    "hydra-core>=1.3.2",
    "wandb>=0.17.0",
    "optuna>=3.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
